--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "util-deprecate": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
